[package]
name = "convert-image"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
machine-vision-formats = "0.1.3"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
] }
thiserror = "1"
bayer = { version = "0.1", default-features = false }
itertools = "0.10.3"
